# bevy_procedural_tree

./: .gitignore  Cargo.toml  Changelog.md  README.md  TODO.md
assets/textures/bark_willow/: source.txt
assets/textures/deciduous_leaves/: color.dds  normal_gl.dds  roughness.dds
assets/textures/evergreen_leaves/: source.txt
examples/: showroom.rs
src/: enums.rs  errors.rs  lib.rs  meshgen.rs  settings.rs
