[package]
name = "bevy_procedural_tree"
authors = ["Affinator"]
version = "0.1.0"
edition = "2024"

[features]
default = []
inspector = ["bevy-inspector-egui"]
perf_ui = ["iyes_perf_ui"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features =  [
    "bevy_color",
    "bevy_gizmos",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "multi_threaded",
    "std"
]}
bevy-inspector-egui = { version = "0.33.1", optional = true }
fastrand = "2.3"
iyes_perf_ui = { version = "0.5", optional = true }

[dev-dependencies]
bevy = { version = "0.16.1", default-features = false, features =  [
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "png",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "wayland",
    "default_font",
    "sysinfo_plugin"
]}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
strip = true
debug-assertions = false # for possible performance regressions (i.e. in WGPU)
overflow-checks = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = false
strip = true

[[example]]
name = "showroom"
required-features = ["inspector", "perf_ui"]
